# financial-analysis-terminal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_cot_exploration.ipynb  02_seasonal_analysis.ipynb
src/: __init__.py
src/data/: config.py  cot.py  prices.py
src/models/: analogs.py  positioning.py  seasonal.py
src/viz/: charts.py  styles.py
tests/: test_cot.py  test_prices.py  test_seasonal.py
